@@ -1,4 +1,9 @@
-﻿shmuel 11.01.2015 20:00:05 +0200 - build 4238
+﻿svs 14.01.2015 12:54:28 +0300 - build 4239
+
+1. F1 в грабере (Alt-Ins) показывает раздел помощи "MiscCmd".
+   Выделение области после гашения окна помощи не прерывается.
+
+shmuel 11.01.2015 20:00:05 +0200 - build 4238
 
 1. Рефакторинг.
 
